@startuml observer
class User {
  
}

Note left of User{
  if training session got canceled
  send message to user
}

Class Client {

}

Client --|> User

interface TrainingSessionSubscribier{
  +trainingSessionCanceled (trainingSession: TrainingSession)
}

TrainingSession o--|> TrainingSessionSubscribier
User -|> TrainingSessionSubscribier

class TrainingSession{
  Attendants: List<Client>

  + addObserver(observer : TrainingSessionSubscribier)
  + removeObserver(observer : TrainingSessionSubscribier)
  + cancelTrainingSession()
}

note "Diagram zawiera jedynie\nelementy istotne dla wzorca." as n

@enduml